# websocket-rpc

./: .coveragerc  .travis.yml  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
examples/: client.py  server.py  server2.py
tests/: test_wsrpc.py
wsrpc/: __init__.py
