[tool.black]
line-length = 88
include = '\.pyi?$'

[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "wsrpc"
dist-name = "websocket-rpc"
author = "Yingbo Gu"
author-email = "tensiongyb@gmail.com"
maintainer="Yingbo Gu"
maintainer-email="tensiongyb@gmail.com"
home-page = "https://github.com/guyingbo/websocket-rpc"
description-file = "README.md"
requires-python=">=3.6"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
]
requires = ["websockets>=4.0.1", "msgpack>=0.5.1"]
dev-requires = ["pytest", "coverage", "pytest-cov", "pytest-asyncio"]
keywords = "websocket rpc msgpack python"
