[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.poetry]
name = "websocket-rpc"
version = "0.0.5"
description = ""
authors = ["Gu Yingbo <tensiongyb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
websockets = "^8.0"
msgpack = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.10.0"
coverage = "^4.5"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
