[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.poetry]
name = "websocket-rpc"
version = "0.0.5"
description = ""
readme = "README.md"
authors = ["Gu Yingbo <tensiongyb@gmail.com>"]
license = "MIT"
homepage = "https://github.com/guyingbo/websocket-rpc"
repository = "https://github.com/guyingbo/websocket-rpc"
packages = [
    { include = "wsrpc" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]
python = "^3.7"
websockets = "^8.0"
msgpack = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.10.0"
coverage = "^4.5"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
